2006-05-13  Murray Cumming  <murrayc@murrayc.com

	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py
	* gtk/src/printoperation.hg: Change set_nr_of_pages() to set_n_pages().
	* gtk/src/printsettings.hg: Change set/get_num_copies() to set/get_n_copies().
	* gtk/src/recentmanager.hg: add_full(): This no longer throws an 
	exception.

2.9.2:

2006-05-12  Murray Cumming  <murrayc@murrayc.com

	* gtk/src/uimanager.ccg: Fix a typo to fix the build when not disabling 
	exceptions.

2.9.1:

2006-05-11  Murray Cumming  <murrayc@murrayc.com

	* demos/gtk-demo/demowindow.cc:
	* demos/gtk-demo/example_iconview.cc: More adapting for the optional API.

2006-05-11  Murray Cumming  <murrayc@murrayc.com

	* demos/gtk-demo/demo-common.cc:
	* demos/gtk-demo/example_iconview.cc:
	* demos/gtk-demo/example_images.cc:
	* demos/gtk-demo/example_pixbufs.cc:
	* demos/gtk-demo/example_textview.cc:
	* demos/gtk-demo/example_uimanager.cc:
	* demos/pixbuf-demo.cc:
	* docs/tutorial/Makefile.am:
	* examples/book/custom/custom_container/examplewindow.cc:
	* examples/book/iconview/examplewindow.cc:
	* examples/book/input/main.cc:
	* examples/book/menus/main_menu/examplewindow.cc:
	* examples/book/menus/popup/examplewindow.cc:
	* examples/book/menus_and_toolbars/examplewindow.cc:
	* examples/book/recent_files/examplewindow.cc:
	* examples/exception/exceptiontest.cc:
	* gdk/src/pixbuf.ccg:
	* gdk/src/pixbuf.hg:
	* gdk/src/pixbufloader.ccg:
	* gdk/src/pixbufloader.hg:
	* gtk/gtkmm/cellrenderer_generation.cc:
	* gtk/gtkmm/treeview_private.cc:
	* gtk/src/aboutdialog.ccg:
	* gtk/src/assistant.ccg:
	* gtk/src/celllayout.ccg:
	* gtk/src/cellrendereraccel.ccg:
	* gtk/src/cellrendereraccel.hg:
	* gtk/src/cellrendererspin.ccg:
	* gtk/src/cellrendererspin.hg:
	* gtk/src/clipboard.ccg:
	* gtk/src/colorselection.ccg:
	* gtk/src/container.ccg:
	* gtk/src/entrycompletion.ccg:
	* gtk/src/filefilter.ccg:
	* gtk/src/iconview.ccg:
	* gtk/src/main.ccg:
	* gtk/src/menu.ccg:
	* gtk/src/menuitem.ccg: