@@ -3777,7 +3777,7 @@ actions that you have already created. For instance:
         &quot;  &lt;/toolbar&gt;&quot;
         &quot;&lt;/ui&gt;&quot;;
 
-    m_refUIManager-&gt;&gt;add_ui_from_string(ui_info);
+    m_refUIManager-&gt;add_ui_from_string(ui_info);
 </programlisting>
 </para>
 <para>
@@ -3787,7 +3787,7 @@ the <function>UIManager::get_widget()</function> method, and then add the widget
 to a container. For instance:
 <programlisting>
 Gtk::Widget* pMenubar = m_refUIManager-&gt;get_widget(&quot;/MenuBar&quot;);
-pBox-&gt;add(*pMenuBard, Gtk::PACK_SHRINK);
+pBox-&gt;add(*pMenuBar, Gtk::PACK_SHRINK);
 </programlisting> 
 </para>
 
@@ -3798,7 +3798,7 @@ pBox-&gt;add(*pMenuBard, Gtk::PACK_SHRINK);
 <para>
 <classname>Menus</classname> are normally just added to a window, but they can
 also be displayed temporarily as the result of a mouse button click. For
-instance, a context menu might be diplayed when the user clicks their right
+instance, a context menu might be displayed when the user clicks their right
 mouse button.
 </para>
 
@@ -3811,7 +3811,7 @@ mouse button.
         &quot;    &lt;menuitem action='ContextProcess'/&gt;&quot;
         &quot;    &lt;menuitem action='ContextRemove'/&gt;&quot;
         &quot;  &lt;/popup&gt;&quot;
-        &quot;&lt;/ui&quot;;
+        &quot;&lt;/ui&gt;&quot;;
         
     m_refUIManager-&gt;add_ui_from_string(ui_info);
 </programlisting>
