@@ -1,3 +1,7 @@
+2006-05-15  Murray Cumming  <murrayc@murrayc.com
+
+	* docs/tutorial/gtkmm-tut.xml: Some typo corrections from Simon Fuhrmann.
+
 2006-05-13  Murray Cumming  <murrayc@murrayc.com
 
 	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py
